# jcs

./: .editorconfig  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
jcs/: __init__.py  _jcs.py  jcs.py
tests/: test_jcs.py
