[tool.poetry]
name = "jcs"
version = "0.2.1"
description = "JCS - JSON Canonicalization"
authors = ["titusz <tp@py7.de>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/titusz/jcs"
keywords=["jcs", "json", "canonicalization", "deterministic", "serialization", "hash"]

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
